src/objects/Survey__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Survey</relationshipLabel>
        <relationshipName>Survey</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EmailAddress__c</fullName>
        <label>EmailAddress</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Survey</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Survey</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>